# nPSI

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  cmake_install.cmake  docker-compose.yml  nPSI.sln  package-lock.json  package.json
app/: GUIPSI.css  GUIPSI.js  app.html  appindex.html  getnpsi.js  npsiform.html  styles.css  stylesheet.css  testnpsi.js
backend/app/: BtEndpoint.h  CLP.cpp  CMakeLists.txt  Makefile  OtBinMain.cpp  app.html  bitPosition.cpp  bitPosition.h  cmake_install.cmake  index.js  indexpage.html  main.cpp  miraclTest.cpp  o1party.h  package-lock.json  package.json  psi3.h  runtime_client.txt  runtime_leader.txt  solution.js  string.h  stylesheet.css  testIntersection.txt  util.h
backend/cryptoTools/: CMakeLists.txt  Makefile  cmake_install.cmake
backend/cryptoTools/Crypto/: AES.hpp  Commit.hpp  Curve.hpp  PRNG.hpp  sha1.hpp
backend/cryptoTools/Network/: MultipartyPSI.code-workspace
backend/include/libOPRF/: .cproject  .project  Makefile  cmake_install.cmake
backend/include/libOTe/: .cproject  .project
backend/libOPRF/: .cproject  .project  Makefile  cmake_install.cmake
backend/libOTe/: .cproject  .project
backend/libPSI_Tests/: .cproject  .project
backend/runhostandport/: client.c  in.h  server.c  socket.h  stdlib.h  unistd.h
backend/src/: MultipartyPSIDemo.c  index.cpp
backend/src/frontend/: .cproject  .project  BtEndpoint.h  Makefile  bitPosition.cpp  cmake_install.cmake  main.cpp
public/: appindex.html  getnpsi.js  getparty2.js  guitest.css  npsiform.html
source/: .cproject  CLP.cpp  OtBinMain.cpp  OtBinMain.h  bitPosition.cpp  bitPosition.h  main.c  util.cpp  util.h
source/headers/Common/: Defines.h  Log.h
source/headers/Network/: BtAcceptor.cpp  BtChannel.h  BtEndpoint.h
source/headers/boost/asio/detail/impl/: scheduler.ipp
source/headers/boost/unordered/detail/: foa.hpp
source/headers/miracl/miracl_osmt/include/: zzn.h
source/libOPRF/: Makefile  cmake_install.cmake
source/libOPRF/Hashing/: BitPosition.cpp  CuckooHasher1.h
source/libOPRF/OPPRF/: binSet.h
source/libOTe/NChooseOne/: KkrtNcoOtReceiver.cpp  KkrtNcoOtReceiver.h
source/libOTe/NChooseOne/Oos/: OosNcoOtSender.h
source/libOTe/Tools/: LinearCode.h  Tools.cpp
src/: .autotools  .cproject  .project  CMakeLists.txt  Makefile
src/testnpsi/: .autotools  .project  CMakeLists.txt  testmain.c  testmain.cpp  testnpsi.c  testnpsi.cpp
src/testnpsi/headers/Network/: BtIOService.h
src/testnpsi/headers/boost/: cstdint.hpp  lexical_cast.hpp
src/testnpsi/headers/boost/archive/: archive_exception.hpp
src/testnpsi/headers/boost/test/impl/: execution_monitor.ipp
src/testnpsi/libOPRF/Hashing/: BitPosition.h  CuckooHasher1.cpp  SimpleHasher1.cpp  SimpleHasher1.h
src/testnpsi/libOPRF/OPPRF/: OPPRFReceiver.cpp  OPPRFReceiver.h  OPPRFSender.cpp  OPPRFSender.h  binSet.cpp
src/testnpsi/libOTe/NChooseOne/: KkrtNcoOtSender.h  NcoOtExt.h
src/testnpsi/libOTe/Tools/: LinearCode.cpp  Tools.h
src/testnpsi/srcfront/: PSITest.html  appindex.html  guitest.js  npsiform.html
