########################################################################################################################
### NPSI LIBRARY MAIN
########################################################################################################################
project(npsi)
cmake_minimum_required(VERSION 3.9.1)
########################################################################################################################
### PROJECT DESCRIPTION AND META INFO
########################################################################################################################
set(CMAKE_CXX_STANDARD 14)

########################################################################################################################
### DECLARE PROJECT
########################################################################################################################
set(NPSI_SRC_DIR ${PROJECT_SOURCE_DIR}/src)
#############################################
#               Build frontend.exe          #
#############################################

file(GLOB_RECURSE SRC_FRONTEND ${CMAKE_SOURCE_DIR}/src/*.cpp)

include_directories(${CMAKE_SOURCE_DIR}/src)

add_executable(npsi ${SRC_FRONTEND})


#############################################
#            Link our libraries             #
#############################################
#target_link_libraries(frontend.exe libPSI_Tests)
target_link_libraries(npsi libOPRF)
target_link_libraries(npsi libOTe)
